6170
Weird. In 2.10.0.r25445-b20110805020350 the "(3)" is missing in the first case:

{code}
scala> val b: Option[String] = 3 :: a
<console>:9: error: type mismatch;
 found   : Int
 required: String
       val b: Option[String] = 3 :: a
                                 ^

scala> val b: Option[String] = a.::(3)
<console>:9: error: type mismatch;
 found   : Int(3)
 required: String
       val b: Option[String] = a.::(3)
                                    ^
{code}
